tests/snapshots/snapshot_sdk_types__envelope_event_command_executed.snap
---
source: tests/snapshot_sdk_types.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-fixed-001",
  "event": {
    "ts": "2025-01-15T12:00:00Z",
    "type": "command_executed",
    "command": "cargo test",
    "exit_code": 0,
    "output_preview": "test result: ok"
  }
}
