tests/snapshots/snapshot_sdk_types__envelope_event_tool_result.snap
---
source: tests/snapshot_sdk_types.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-fixed-001",
  "event": {
    "ts": "2025-01-15T12:00:00Z",
    "type": "tool_result",
    "tool_name": "read_file",
    "tool_use_id": "tc-001",
    "output": "fn main() {}",
    "is_error": false
  }
}
